# speedtest-cli

./: pyproject.toml  speedtest.py
