[project]
name = "speedtest-cli"
version = "2.1.4b1"
description = "Command line interface for testing internet bandwidth using speedtest.net"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []
keywords = ["speedtest", "speedtest.net"]
authors = [
    { name = "Matt Martz", email = "matt@sivel.net" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/sivel/speedtest-cli"

[project.scripts]
speedtest = "speedtest:main"
speedtest-cli = "speedtest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["speedtest.py"]
